[project]
name = "ardrone-example"
version = "0.1.0"
description = "Parrot AR.Drone 2.0 control"
readme = "README.md"
license = "LICENSE"
requires-python = ">=3.11"
authors = [
  { name = "Miguel Villa Florán", email = "miguel.villafloran@gmail.com" },
]

dependencies = ["ardrone-sdk>=0.4.4", "pygame-ce>=2.5.6"]
